# python-selve

./: .gitignore  README.md  README.rst  package.sh  package_test.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
.history/selve/: iveo_20181110020812.py  iveo_20181110020814.py
cli/: selve_cli.py
selve/: HW_Thread.py  Py2XML.py  Sirius.py  XML2py.py  __init__.py  iveo.py  protocol.py  utils.py
selve/cli/: selve_cli.py
