[metadata]
name = python-selve
version = 1.3.0
description = 'Python library for interfacing with selve devices using the USB-RF controller',  # Required   
long_description = file: README.rst
keywords = selve, blind, awning, shutter, usb, rf
license = MIT
license_file = LICENSE

home-page  = https://github.com/gpulido/python-selve
author = Gabriel Pulido

author_email = gabriel.pulidodetorres@gmail.com

classifiers =    
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires = 
    pySerial
    pybase64
    untangle
scripts =
    cli/selve_cli.py

# setup_requires =
#   setuptools_scm